# guarded-stage-react-execution-control

./: .gitignore  CITATION.cff  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
docs/: method_en.md  method_zh-CN.md  results.md
examples/: picktwo_debug_v2_hardguard.csv
results/: ablation_seed42_random50.csv  baseline_full134_summary.json  guarded_full134_by_type.csv  guarded_full134_summary.json  intervention_stats_full134.csv  main_summary.csv  paired_tests_full134.csv  picktwo_interventions_full134.csv  strong_prompt_full134_summary.json  task_type_full134.csv
scripts/: run_guarded_stage_react.py  summarize_results.py
src/guarded_stage_react/: __init__.py  controller.py
tests/: test_controller.py
